# basalt

./: .gitignore  CMakeLists.txt  Folder.DotSettings  LICENSE  README.md
basalt/: CMakeLists.txt
basalt/basalt/: CMakeLists.txt
basalt/basalt/include/: command_pool.h  instance.h  pipeline.h  renderpass.h  shader_module.h  surface.h  sync_objects.h  utils.h
basalt/basalt/src/: buffer.cpp  command_buffer.cpp  device.cpp  instance.cpp  shader_module.cpp  simple_vertex_2D.cpp  surface.cpp  utils.cpp
basalt/examples/hello_triangle/: CMakeLists.txt
basalt/include/: buffer.h  command_buffer.h  compute_pipeline.h  descriptor_pool.h  descriptor_set_layout.h  device.h  graphics_pipeline.h  image.h  queue.h  simple_vertex_2D.h  swapchain.h  utils.h
basalt/resources/: cube.fbx
basalt/shaders/: triangle.vert
basalt/src/: command_pool.cpp  compute_pipeline.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  device.cpp  graphics_pipeline.cpp  image.cpp  library_test.cpp  main.cpp  pipeline.cpp  queue.cpp  renderpass.cpp  swapchain.cpp  sync_objects.cpp  utils.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/tester/: library_test.h
shaders/: CMakeLists.txt  triangle.frag
